--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "unsplash-js": "^6.0.0"
+    "unsplash-js": "^6.0.0",
+    "framer-motion": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
