Remove dead dependencies + Move BackgroundImage behaviour inside it

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "unsplash-js": "^6.0.0",
-    "framer-motion": "latest"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +23,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "chrome >= 37"
     ],
     "development": [
       "last 1 chrome version",
