--- a/package.json
+++ b/package.json
@@ -3,14 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "underscore": "^1.9.2"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,9 +24,8 @@
       "chrome >= 37"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "chrome >= 37",
+      "last 1 firefox version"
     ]
   }
 }
